<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:background="@drawable/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <include
        android:id="@+id/fragmentTitle"
        layout="@layout/fragment_title_desc_layout" />
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/fragmentTitle"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="0dp">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_names"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/full_name"
        app:errorEnabled="true"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/OutlinedTextField"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_snames"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/surname"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tl_names"
        style="@style/OutlinedTextField"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_sname"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_dob"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/dob"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tl_snames"
        style="@style/OutlinedTextField"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_dob"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:focusable="false"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tl_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/email_address"
        app:errorEnabled="true"
        app:layout_constraintTop_toBottomOf="@+id/tl_dob"
        style="@style/OutlinedTextField"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReg"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/register"
        style="@style/button_primary"
        android:layout_width="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>