<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_gradient"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/bottom_white_gradient"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="wrap_content">
        <View
            android:id="@+id/vw"
            android:layout_width="60dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/grey_100"

            android:layout_marginTop="8dp"
            android:layout_height="4dp"/>
        <TextView
            android:id="@+id/tv_tit"
            style="@style/header_text"
            android:textColor="@color/colorPrimary"
            android:text="Full-Statement"
            android:paddingTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vw"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_start_date"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/start_date"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_tit"
            style="@style/OutlinedTextField"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_startDate"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:focusable="false"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_endDate"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/end_date"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tl_start_date"
            style="@style/OutlinedTextField"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_endDate"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:focusable="false"
                android:inputType="text"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tv_desc"
            style="@style/black_text"
            android:textColor="@color/black"
            android:text="@string/your_statement_will_be_sent_to_your_registered_email_address"
            android:paddingTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tl_endDate"

            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tl_email"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:hint="@string/email_address"
            app:errorEnabled="true"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc"
            style="@style/OutlinedTextField"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:focusable="false"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            app:layout_constraintTop_toBottomOf="@+id/tl_email"
            android:text="@string/continu"
            android:layout_marginTop="25dp"
            style="@style/button_primary"
            android:layout_width="match_parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>